--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <title>Document</title>
 </head>
 <body>
-  
-  hello
-
-  develop
+  <header>
+   ヘッダー
+  </header>
+  <main>
+   メイン
+  </main>
+  <footer>
+   フッター
+  </footer>
 </body>
 </html>
