--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
   <header>
-   ヘッダー
+   <div>title</div>
+   <ul>
+     <li>リンク1</li>
+     <li>リンク2</li>
+    </ul>
   </header>
   <main>
    メイン
